// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.rippledown.grpc";
option java_outer_classname = "rdr";

package rdr;

service Rippledown {
    rpc interpret (InterpretationRequest) returns (InterpretationResponse) {}

    rpc createKB (KBCreateRequest) returns (StatusMessage) {}

    rpc deleteAllKBs(KBDeleteAllRequest) returns (StatusMessage) {}
}

message InterpretationRequest {
  string kbName = 1;
  string caseName = 2;
  string text = 3;
}

message InterpretationResponse {
    string report = 1;
}

message KBCreateRequest {
  string kbName = 1;
}

message KBDeleteAllRequest {
}

message StatusMessage {
  string message = 1;
}
